# DZCHERRY

./: .gitignore  OutputFileFromTest  README.md  garbage.txt  mtmFlixAddFriend_test.out  mtmFlixGetRecommendations_test.out  mtmFlixRemoveFriend_test.out  mtmFlixReportSeries_test.out  mtmFlixReportUsers_test.out  mtmFlixSeriesJoin_test.out  mtmFlixSeriesLeave_test.out  mtmflix.c  mtmflixRemoveSeries_testAdvanced.out  mtmflixRemoveUser_testAdvanced.out  series.c  user.c  utilities.c
listfilter/: listfilter.c
map_mtm/: CMakeLists.txt  map_mtm.c
merge_sort/: CMakeLists.txt  merge_sort.c
mtmflix/: CMakeLists.txt  a.out  makefile  mtmFlixReportSeries_test.out  mtm_ex3.h  mtmflix  mtmflix.c  mtmflix.h  series.c  series.h  user.c  user.h  utilities.c  utilities.h
mtmflix/newtests/: main.c  test_utilities.h  test_utilities_2.h
mtmflix/tests/: mtmflix-tests.c
